@@ -1,4 +1,8 @@
-﻿drkns 04.12.2015 00:24:07 +0200 - build 4464
+﻿drkns 07.12.2015 21:03:09 +0200 - build 4465
+
+1. Уточнение 4461.
+
+drkns 04.12.2015 00:24:07 +0200 - build 4464
 
 1. Рефакторинг.
 
